--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
     vertical-align: middle;
     -webkit-tap-highlight-color: transparent;
 }
+#student:hover {
+    cursor: pointer;
+}
 #student:focus {
     outline: none !important;
 }
@@ -24,6 +27,9 @@
     text-align: center;
     vertical-align: middle;
     -webkit-tap-highlight-color: transparent;
+}
+#random:hover {
+    cursor: pointer;
 }
 body{
     background-image: url(https://www.linuxfoundation.org/wp-content/uploads/2016/12/lf_background_trees.jpg)
