--- a/style.css
+++ b/style.css
@@ -28,5 +28,5 @@
     cursor: pointer;
 }
 body{
-    background-image: url(https://www.linuxfoundation.org/wp-content/uploads/2016/12/lf_background_trees.jpg)
+    background: url(https://www.linuxfoundation.org/wp-content/uploads/2016/12/lf_background_trees.jpg) no-repeat center center fixed;
 }
