--- a/style.css
+++ b/style.css
@@ -32,3 +32,19 @@ body{
     background: url(https://www.linuxfoundation.org/wp-content/uploads/2016/12/lf_background_trees.jpg) no-repeat center center fixed;
     text-align: center;
 }
+@media screen and (max-width: 350px) {
+    #random{
+        width: 100px;
+        height: 50px;
+        font-size: 12px;
+        border-radius: 5px;
+        line-height: 1.24;
+    }
+    #student{
+        width: 100px;
+        height: 50px;
+        font-size: 12px;
+        border-radius: 5px;
+        line-height: 1.24;
+    }
+}
