--- a/style.css
+++ b/style.css
@@ -48,3 +48,22 @@ body{
         line-height: 1.24;
     }
 }
+@media screen and (max-width: 150px) {
+    #random{
+        width: 100px;
+        height: 50px;
+        font-size: 12px;
+        border-radius: 5px;
+        line-height: 1.24;
+        margin-top: -60px;
+        margin-bottom: 30px;
+    }
+    #student{
+        width: 100px;
+        height: 50px;
+        font-size: 12px;
+        border-radius: 5px;
+        line-height: 1.24;
+        margin-top: -40px;
+    }
+}
