--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@
     cursor: pointer;
 }
 body{
-    background: url(https://www.linuxfoundation.org/wp-content/uploads/2016/12/lf_background_trees.jpg) no-repeat center center fixed;
+    background: url(https://www.linuxfoundation.org/wp-content/uploads/2016/12/lf_background_trees.jpg) no-repeat ;
+    background-size: cover;
     text-align: center;
 }
 @media screen and (max-width: 350px) {
