--- a/style.css
+++ b/style.css
@@ -30,8 +30,11 @@
 }
 body{
     background: url(https://www.linuxfoundation.org/wp-content/uploads/2016/12/lf_background_trees.jpg) no-repeat ;
-    background-size: cover;
+    background-size: 100% 100%;
     text-align: center;
+}
+html {
+    height: 100%;
 }
 @media screen and (max-width: 350px) {
     #random{
